[package]
name = "rrt"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"        # For random sampling
num-traits="0.2"    # For Float trait
kiddo = "5.0"       # For kd-trees


[dev-dependencies]
macroquad = "0.3"   # Used only for animations in examples
image = "0.24"
clap = { version = "4.5.23", features = ["derive"] }
